--- a/TigerCheck/TigerCheck.csproj
+++ b/TigerCheck/TigerCheck.csproj
@@ -64,6 +64,12 @@
     <Compile Include="CheckOutScreen.Designer.cs">
       <DependentUpon>CheckOutScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Height and Weight.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Height and Weight.Designer.cs">
+      <DependentUpon>Height and Weight.cs</DependentUpon>
+    </Compile>
     <Compile Include="NewSessionScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CheckOutScreen.resx">
       <DependentUpon>CheckOutScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Height and Weight.resx">
+      <DependentUpon>Height and Weight.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewSessionScreen.resx">
       <DependentUpon>NewSessionScreen.cs</DependentUpon>
