--- a/TigerCheck/TigerCheck.csproj
+++ b/TigerCheck/TigerCheck.csproj
@@ -80,7 +80,6 @@
       <DependentUpon>CheckOutScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Patient.cs" />
-    <Compile Include="TigerSQL.cs" />
     <Compile Include="Height and Weight.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,7 +128,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
