Heart Rate / Blood Pressure forms
When I uploaded earlier, I put my files in through the file explorer
rather than through Visual Studio, Zach got my code transferred, I've
got my forms fixed and made sure the code got transferred corretly

--- a/TigerCheck/TigerCheck.csproj
+++ b/TigerCheck/TigerCheck.csproj
@@ -124,6 +124,9 @@
     <EmbeddedResource Include="AdminScreen.resx">
       <DependentUpon>AdminScreen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="BloodPressure.resx">
+      <DependentUpon>BloodPressure.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BloodSugar.resx">
       <DependentUpon>BloodSugar.cs</DependentUpon>
     </EmbeddedResource>
@@ -135,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cholesterol.resx">
       <DependentUpon>Cholesterol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HeartRate.resx">
+      <DependentUpon>HeartRate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewSessionScreen.resx">
       <DependentUpon>NewSessionScreen.cs</DependentUpon>
