--- a/TigerCheck/TigerCheck.csproj
+++ b/TigerCheck/TigerCheck.csproj
@@ -103,6 +103,12 @@
     <Compile Include="HeartRate.Designer.cs">
       <DependentUpon>HeartRate.cs</DependentUpon>
     </Compile>
+    <Compile Include="HeightWeight.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HeightWeight.Designer.cs">
+      <DependentUpon>HeightWeight.cs</DependentUpon>
+    </Compile>
     <Compile Include="Patient.cs" />
     <Compile Include="NewSessionScreen.cs">
       <SubType>Form</SubType>
@@ -120,6 +126,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PatientRecordsDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Vision.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vision.Designer.cs">
+      <DependentUpon>Vision.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AdminScreen.resx">
       <DependentUpon>AdminScreen.cs</DependentUpon>
@@ -142,6 +154,9 @@
     <EmbeddedResource Include="HeartRate.resx">
       <DependentUpon>HeartRate.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HeightWeight.resx">
+      <DependentUpon>HeightWeight.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NewSessionScreen.resx">
       <DependentUpon>NewSessionScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -155,6 +170,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Vision.resx">
+      <DependentUpon>Vision.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
